<resources>
    <string name="app_name">ImPro</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main">MainFragment</string>
    <string name="menu">MenuFragment</string>
    <string name="stillfragment">StillFragment</string>
    <string name="livefragment">LiveFragment</string>
    <string name="mainact">MainActivity</string>
    <string name="request_permission">Permission</string>
    <string name="camera_error">Camera error</string>

    <string name="p_color_title">Filtering scheme</string>
    <string name="p_color_summ">Choose RGB, CMYK or HSV</string>
    <string name="p_color_dialog">Filtering scheme</string>

    <string name="p_imagetype_title">Image format</string>
    <string name="p_imagetype_summ">Choose png, jpeg or webp</string>
    <string name="p_imagetype_dialog">Image format</string>


    <string name="p_quality_title">Quality</string>
    <string name="p_quality_dialog">Choose the filtered image size</string>
    <string name="p_quality_default">100%</string>

    <string name="p_numberpicker_summary">Choose the filtered image size</string>
    <string name="p_numberpicker_title">Quality</string>

    <string name="picture_description">Hier ist ein schoenes Bild!</string>

    <string name="quality">Quality</string>
    <string name="numberPicker1Title">Quality</string>

    <string name="colorbar">Filter ranges</string>

    <string name="filenamePickerTitle">Choose filename</string>
    <string name="filenameHint">filename</string>

    <string name="saveImage">Save filtered image</string>
    <string name="saveImageSummary">Save filtered image to internal storage</string>
    <string name="button_saveorig">Save original image</string>
    <string name="button_savefilt">Save filtered image</string>
    <string name="button_open">Load image from folder</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>

    <string name="fileopen_title">Choose file to be loaded</string>
</resources>
