<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <ListPreference
        android:key="p_color_key"
        android:title="@string/p_color_title"
        android:summary="@string/p_color_summ"
        android:dialogTitle="@string/p_color_dialog"
        android:entries="@array/p_color_entries"
        android:entryValues="@array/p_color_values"
        android:defaultValue="0"
        android:persistent="true"
        />

    <com.example.kiki.impro.NumberPickerPreference
        android:id="@+id/numberPickerPref"
        android:key="p_quality_key"
        android:title="@string/p_numberpicker_title"
        android:summary="@string/p_numberpicker_summary"
        android:positiveButtonText="@android:string/ok"
        android:negativeButtonText="@android:string/cancel"
        android:defaultValue="50"
        />


    <ListPreference
        android:key="p_imagetype_key"
        android:title="@string/p_imagetype_title"
        android:summary="@string/p_imagetype_summ"
        android:dialogTitle="@string/p_imagetype_dialog"
        android:entries="@array/p_imagetype_entries"
        android:entryValues="@array/p_imagetype_values"
        android:defaultValue="0"
        android:persistent="true"
        />

</PreferenceScreen>


